fixing cde secondary title because it is too big

--- a/wp-content/themes/uwsod-2014/less/uw.dental.less
+++ b/wp-content/themes/uwsod-2014/less/uw.dental.less
@@ -126,7 +126,7 @@ h6,
 	font-size: 17px;
 	font-weight:700;
 }
-
+.uw-body h2.cdesecondtitle {font-size: 23px;font-weight:normal;}
 hr {
 	border-top: 1px solid #b7a57a;
 	clear: both;
